--- a/LayoutApp/app/src/main/res/menu/three_dots_menu.xml
+++ b/LayoutApp/app/src/main/res/menu/three_dots_menu.xml
@@ -2,7 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item 1" />
-    <item android:title="Item 2" />
-    <item android:title="Item 3" />
+    <item android:id="@+id/item1"
+        android:title="Item 1"
+        app:showAsAction="never"/>
+    <item android:id="@+id/item2"
+        android:title="Item 2"
+        app:showAsAction="never"/>
+    <item android:id="@+id/item3"
+        android:title="Item 3"
+        app:showAsAction="never"/>
 </menu>
