--- a/ProfileApp/app/src/main/res/menu/header_menu.xml
+++ b/ProfileApp/app/src/main/res/menu/header_menu.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/action_about"
+        android:title="Sobre"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item
+        android:id="@+id/action_help"
+        android:title="Ajuda"
+        android:orderInCategory="101"
+        android:showAsAction="never" />
+    <item
+        android:id="@+id/action_new_experience"
+        android:title="Cadastrar experiência"
+        android:orderInCategory="102"
+        android:showAsAction="never" />
 
 </menu>
